--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Our Restaurants</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
+            <li class="nav-item"><a href="#restaurant" class="nav-link">Our Restaurants</a></li>
+            <li class="nav-item"><a href="#gallery" class="nav-link">Gallery</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- END nav -->
     
-    <section class="home-slider owl-carousel">
+    <section class="home-slider owl-carousel" id="home">
       <div class="slider-item" style="background-image: url('image/image2.jpg');">
         <div class="overlay"></div>
         <div class="container">
@@ -119,7 +119,7 @@
 
   <br><br><br>
 
-     <section class="ftco-section-2">
+     <section class="ftco-section-2" id="about">
       <div class="head">
         <h3 class="container line"><span class="subheading">About Foodie</span></h3>
       </div>
@@ -142,7 +142,7 @@
 
 <br>
 <br>
-    <section class="ftco-section ftco-services">
+    <section class="ftco-section ftco-services" id="services">
       <div class="head">
         <h3 class="container line"><span class="subheading">Our Services</span></h3>
       </div>
