--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-            <li class="nav-item"><a href="#restaurant" class="nav-link">Our Restaurants</a></li>
+            <li class="nav-item"><a href="#restaurants" class="nav-link">Our Restaurants</a></li>
             <!--<li class="nav-item"><a href="#gallery" class="nav-link">Gallery</a></li>-->
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
@@ -58,7 +58,7 @@
           <div class="row slider-text align-items-center justify-content-center text-center">
             <div class="col-md-10 col-sm-12 ftco-animate">
               <h1 class="mb-3">Order Food From Your Favourite Restaurant</h1>
-              <p><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
+              <p><a href="#restaurants" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
           <div class="row slider-text align-items-center justify-content-center text-center">
             <div class="col-md-10 col-sm-12 ftco-animate">
               <h1 class="mb-3">Taste a Delicious Food</h1>
-              <p><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
+              <p><a href="#restaurants" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
           <div class="row slider-text align-items-center justify-content-center text-center">
             <div class="col-md-10 col-sm-12 ftco-animate">
               <h1 class="mb-3">Exquisite Dishes</h1>
-              <p><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
+              <p><a href="#restaurants" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
           <div class="row slider-text align-items-center justify-content-center text-center">
             <div class="col-md-10 col-sm-12 ftco-animate">
               <h1 class="mb-3">Hygienic Foods</h1>
-              <p><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
+              <p><a href="#restaurants" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
           <div class="row slider-text align-items-center justify-content-center text-center">
             <div class="col-md-10 col-sm-12 ftco-animate">
               <h1 class="mb-3">Special and Fresh Foods</h1>
-              <p><a href="#" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
+              <p><a href="#restaurants" class="btn btn-primary btn-outline-white px-5 py-3">See the Restaurant menu's here</a></p>
             </div>
           </div>
         </div>
@@ -220,7 +220,7 @@
 
 
 
-    <section class="ftco-section-3">
+    <section class="ftco-section-3" >
       <div class="head">
         <h3 class="container line"><span class="subheading">Our Mobile App</span></h3>
       </div>
@@ -252,7 +252,7 @@
 
 
 
-    <section class="recent_bloger_area">
+    <section class="recent_bloger_area" id="restaurants">
       <div class="head">
         <h3 class="container line"><span class="subheading">Our Restaurants</span></h3>
       </div>
